Wed Sep 16 17:25:43 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb (Matrix#/): Fix was is obviously a bug

Wed Sep 16 16:51:05 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (rb_thread_start_timer): start to catch SIGVTALRM together
	  with timer thread.   [ruby-core:25606]

	* eval.c (rb_thread_atfork): stop timer thread.

Wed Sep 16 15:00:21 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb (Scalar#/): fix bug whereby (any numeric)/(any
	  Matrix) would raise an error

Wed Sep 16 13:30:20 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/matrix.rb:  trivial optimizations

Tue Sep 15 15:32:16 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/Makefile.sub (RDOCTARGET): the meaning of this macro was changed
	  at r24923.

Tue Sep 15 15:16:14 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (install-rdoc), configure.in (RDOCTARGET): removed
	  circular dependency.  [ruby-dev:39339]

Tue Sep 15 10:48:52 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (install-all): target to install all.

	* instruby.rb: merged from trunk.

Tue Sep 15 04:25:03 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RDOCTARGET): use install-all.  [ruby-dev:39334]

Mon Sep 14 11:23:45 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in, common.mk, */configure.bat (rdoc): make before
	  install if rdoc is enabled.  [ruby-dev:39325]

Mon Sep 14 11:10:06 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (check-ruby): run all test of ruby itself.

Mon Sep 14 07:30:56 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/cgi/cookie.rb (value): Keep CGI::Cookie#value in sync with the
	  cookie itself. A patch by Arthur Schreiber [ruby-core:17634]

Mon Sep 14 04:57:27 2009  Marc-Andre Lafortune  <ruby-core@marc-andre.ca>

	* lib/irb/ext/multi-irb.rb: Fix arguments handling for shell commands
	  in irb; a patch by Yusuke Endoh [ruby-dev:35075]
